[tool.poetry]
name = "finalproject_Yakushev_Arseny_M25-555"
version = "0.1.0"
description = "ValutaTrade Hub — CLI wallet simulator with parser service"
authors = ["Ctyzzz <sentus008@gmail.com>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]
include = ["main.py", "data/*.json"]

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.12.0"
requests = "^2.32.3"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"

[tool.poetry.scripts]
project = "main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

# Единая конфигурация проекта (Singleton SettingsLoader читает отсюда)
[tool.valutatrade]
data_dir = "data"
logs_dir = "logs"
default_base_currency = "USD"
rates_ttl_seconds = 300
initial_usd_balance = 10000.0
log_level = "INFO"
log_max_bytes = 1048576
log_backup_count = 5
